--- a/src/App.css
+++ b/src/App.css
@@ -22,9 +22,51 @@
     font-size: large;
 }
 
+.header-container {
+    background-color: white;
+    text-align: center;
+}
+
 .img-head {
     text-align: center;
-   
+}
+
+.navbar-parent {
+    text-align: center;
+}
+
+.navBar-title {
+    color: #c40407;
+}
+
+.navBar1 {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    display: inline-block;
+}
+
+href {
+    color: #c40407;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #555;
+    color: white;
 }
 
 @keyframes App-logo-spin {
