--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #0b0b0b;
     display: inline-block;
 }
 
